# xiaoweiba

./: .dependency-cruiser.js  .env.example  .eslintrc.js  .gitignore  .madgerc.json  .vscodeignore  CHANGELOG.md  LICENSE  README.md  al.txt  auto_fix_cycle.ps1  auto_quality_cycle.ps1  auto_run_log.txt  check_last.txt  check_persistence.js  codegen-test.txt  codegen_test.txt  collab_test.txt  commit_style_test_output.txt  config.yaml  cov.txt  coverage_analysis.txt  coverage_detailed.txt  coverage_final.txt  coverage_output.txt  coverage_report.txt  csl_test.txt  ctx-test.txt  cvp.txt  db_failures.txt  db_test_errors.txt  esbuild.js  explain-test.txt  failing_tests.txt  final_coverage.txt  final_results.txt  full_db_test.txt  full_test.txt  jest.config.js  last_failure.txt  (+30 more)
cortex/: .dockerignore  .env.example  AGENT_DESIGN_PHILOSOPHY.md  AGENT_SYSTEM_FULL_SPEC.md  AGENT_TECHNICAL_SPECIFICATION.md  ARCHITECTURE_COMPLIANCE_CHECKLIST.md  ARCHITECTURE_DOCUMENTATION_INDEX.md  ARCHITECTURE_FIX_FINAL_REPORT.md  ARCHITECTURE_GAP_ANALYSIS.md  ARCHITECTURE_RISK_MITIGATION_SPEC.md  ARCHITECTURE_RISK_SPEC.md  CORE_ENGINE_IMPLEMENTATION_SPEC.md  CORE_ENGINE_SPEC.md  CORTEX_ULTIMATE_BLUEPRINT.md  Dockerfile  EXISTENTIAL_MANIFESTO_SPEECH_AND_BEING.md  MEMORY_SYSTEM_HYBRID_ATTENTION_SPEC.md  MIGRATION_PROGRESS.md  PHILOSOPHICAL_APPENDIX.md  PROJECT_COMPLETION_REPORT.md  README.md  SKILL_SYSTEM_PRIVATE_ENGINE_SPEC.md  ULTIMATE_ARCHITECTURE_ROADMAP.md  config.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  start.bat  start.sh  verify_architecture.py
(+433 files in other folders)
