[tool.poetry]
name = "cortex"
version = "0.1.0"
description = "Cortex - 思想熔炉，概念创造平台"
authors = ["Cortex Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
websockets = "^12.0"
pydantic = "^2.5.0"
chromadb = "^0.4.22"
sqlalchemy = "^2.0.25"
aiosqlite = "^0.19.0"
openai = "^1.10.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
textual = "^0.48.0"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
